<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/border_1dp_radius"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_weight="1"
            android:src="@drawable/ic_account_circle_black_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_weight="9"
            android:layout_gravity="center_vertical"
            android:text="@string/contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:fontFamily="sans-serif-thin"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/userdata_edit_name"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/userdata_edit_phone"
            android:layout_marginBottom="10dp"
            android:inputType="phone"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/userdata_edit_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/button_save_userdata"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:text="@string/save"
        android:background="@drawable/green_button_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" />

</LinearLayout>