<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/complete_userdata_legend"
        android:text="@string/complete_userdata_legend"
        android:gravity="center"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:onClick="showUserdata"
            android:background="@drawable/border_1dp_radius"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_perm_contact_calendar_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:gravity="center"
                android:text="@string/contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif-thin"
                />
        </LinearLayout>

        <LinearLayout
            android:onClick="showCreditCard"
            android:background="@drawable/border_1dp_radius"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_credit_card_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:text="@string/credit_card"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif-thin"
                />
        </LinearLayout>

        <LinearLayout
            android:onClick="showAddressList"
            android:background="@drawable/border_1dp_radius"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_map_black_36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:text="@string/my_addresses"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:fontFamily="sans-serif-thin"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:background="@drawable/border_1dp_radius"
        android:padding="10dp"
        android:text="@string/history_orders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/order_history_list"
        android:listSelector="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
