<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:textColor="@color/text"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/new_address"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_address_street"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:imeOptions="actionSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/text"
                android:background="@drawable/border_1dp_radius"
                android:padding="16dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/street"
                android:inputType="text" />

            <Spinner
                android:id="@+id/cities_spinner"
                android:entries="@array/cities_array"
                android:background="@drawable/spinner_bg"
                android:layout_width="fill_parent"
                android:layout_height="50dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:background="@color/grey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_save_new_address"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/green_button_selector"
            android:textColor="@color/white"
            android:textSize="13dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/add"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </LinearLayout>

</LinearLayout>


